@@ -1,3 +1,10 @@
+2007-09-28  Chris Rivera  <crivera@novell.com>
+
+	* src/cups-autoconfig.c:
+
+	Use g_option_context_get_help() if no flags
+	are provided.
+
 2007-07-30  Chris Rivera  <crivera@novell.com>
 
 	* src/cups-autoconfig.c:
